# drone_in_pipe

./: .gitignore  CMakeLists.txt  README.md  package.xml
adrien_driver/: CMakeLists.txt  package.xml
adrien_driver/config/: PMW3901.yaml
adrien_driver/launch/: bag_view.launch  camera_recorder.launch  d415.launch  data_recorder.launch  localization_test.launch  localization_visualizer.launch  recorder.launch  sensor_drivers.launch  sensor_test.launch  urdf_view.launch
adrien_driver/rviz/: localization.rviz  sensor_test.rviz  urdf_view.rviz
adrien_driver/urdf/: adrien.urdf
autoflight_in_pipe/: CMakeLists.txt  package.xml
autopilot_in_pipe/: CMakeLists.txt  package.xml  setup.py
autopilot_in_pipe/scripts/: mpc_sim.py
autopilot_in_pipe/src/: mpc_node.cpp
drone_apm_gazebo_sim/: CMakeLists.txt  package.xml
drone_apm_gazebo_sim/launch/: gazebo_iris.launch  preparing_sitl.launch  sewage_pipe.launch
drone_apm_gazebo_sim/worlds/: iris_rangefinder_runway.world  sewage_pipe.world
drone_controller_io/: CMakeLists.txt  package.xml  setup.py
drone_controller_io/msg/: ChannelOutput.msg  ChannelState.msg  NormalizedRCIn.msg  NormalizedRCOut.msg
drone_controller_io/src/: rc_behaviour.py  rc_behaviour_sim.py  rc_io_normalizer.py
drone_sensor_analyzer/: CMakeLists.txt  package.xml  setup.py
drone_sensor_analyzer/launch/: calibration_bag_view.launch  mocap_bag_view.launch  mocap_flow.launch
drone_sensor_analyzer/rviz/: bag_view.rviz  mocap_vis.rviz
drone_sensor_analyzer/scripts/: csv_log_publisher.py  flow_delta_visualizer.py  gazebo_optical_flow_to_csv.py  integrated_flow_visualizer.py  joint_speed_publisher.py  localization_evaluator.py  mocap_optical_flow_csv_converter.py  mocap_optical_flow_to_csv.py  move_evaluator.py  optical_flow_cov_calc.py  pose_to_tf2.py  real_optical_flow_cov_calc.py  rosbag_to_csv.py
gazebo_pipe_worlds/: CMakeLists.txt  package.xml
gazebo_pipe_worlds/models/sewage_pipe_1/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_1/materials/scripts/: concrete.material
gazebo_pipe_worlds/models/sewage_pipe_1/meshes/: sewage_pipe_1.blend
gazebo_pipe_worlds/models/sewage_pipe_1200mm/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_1200mm/meshes/: sewage_pipe_1200mm.stl
gazebo_pipe_worlds/models/sewage_pipe_2/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_2/meshes/: sewage_pipe_2.stl
gazebo_pipe_worlds/models/sewage_pipe_3/: model.sdf
gazebo_pipe_worlds/models/sewage_pipe_600mm/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_600mm/materials/scripts/: concrete.material
gazebo_pipe_worlds/models/sewage_pipe_600mm/meshes/: sewage_pipe_600mm.stl
gazebo_pipe_worlds/models/sewage_pipe_700mm/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_700mm/meshes/: sewage_pipe_700mm.stl
gazebo_pipe_worlds/models/sewage_pipe_800mm/: model.config  model.sdf
gazebo_pipe_worlds/models/sewage_pipe_800mm/materials/scripts/: concrete.material
gazebo_pipe_worlds/models/sewage_pipe_800mm/meshes/: sewage_pipe_800mm.stl
gazebo_pipe_worlds/models/some_materials/materials/: model.config  model.sdf
gazebo_pipe_worlds/models/some_materials/materials/scripts/: concrete_long.material
gazebo_pipe_worlds/worlds/: empty.world  optical_flow_test_ground.world  sewage_pipe_02.world  sewage_pipe_03.world  sewage_pipe_1.world  sewage_pipe_1200mm.world  sewage_pipe_600mm.world  sewage_pipe_700mm.world  sewage_pipe_800mm.world
instant_autoflight/: CMakeLists.txt  package.xml  setup.py
instant_autoflight/launch/: apm.launch  apm_config.yaml  apm_pluginlists.yaml  autoalt.launch  preparing.launch  preparing_without_t265.launch  rc_to_attitude.launch
instant_autoflight/src/: auto_alt.py  autoalt.py  autoflight_node.py  joy_to_attitude.py  orientation_visualizer.py  pose_to_path.py  rc_to_attitude.py  set_stream_rate.py  stream_rate_publisher.py
localization_in_pipe/: CMakeLists.txt  nodelet_description.xml  nodelet_plugins.xml  package.xml
localization_in_pipe/config/: PMW3901.yaml
localization_in_pipe/include/localization_in_pipe/: body_accel_estimator.h  body_angular_velocity_estimator.h  flow_range_integrator.h  flow_range_integrator_node.h  mose_ukf.h  move_ukf.h
localization_in_pipe/launch/: move_ukf.launch
localization_in_pipe/src/: body_accel_estimator.cpp  body_angular_velocity_estimator.cpp  flow_range_integrator.cpp  level_plane_tf_broadcaster.cpp  mose_ukf.cpp  move_ekf_eqs.py  move_ukf.cpp  p3d_odometry_converter.cpp  ransac_cylinder_estimator.cpp  single_optical_flow_speed_estimator.cpp
localization_in_pipe/src/nodelets/: body_accel_estimator_nodelet.cpp  body_angular_velocity_estimator_nodelet.cpp  flow_range_integrator_nodelet.cpp  move_ukf_nodelet.cpp  pointcloud1_to_2_converter_nodelet.cpp  pointcloud_merger_nodelet.cpp  pointcloud_transform_nodelet.cpp
localization_in_pipe/src/nodes/: flow_range_integrator_node.cpp
localization_in_pipe_msgs/: CMakeLists.txt  package.xml
localization_in_pipe_msgs/msg/: IntegratedFlow.msg
localization_in_pipe_msgs/srv/: CalibrateImu.srv
misc/: bag_plotter.py
multizone_lidar/: CMakeLists.txt  package.xml
multizone_lidar/src/: multizone_lidar_converter.cpp
multizone_lidar_msgs/: CMakeLists.txt  package.xml
multizone_lidar_msgs/msg/: MultizoneRange.msg
multizone_lidar_msgs/src/: multizone_range_converter_node.cpp  multizone_range_to_pointcloud2.cpp
optical_flow_msgs/: CMakeLists.txt  package.xml
optical_flow_msgs/msg/: OpticalFlowDelta.msg
px4_gazebo_sim/: CMakeLists.txt  package.xml
px4_gazebo_sim/config/: optical_flow_tester_controllers.yaml
px4_gazebo_sim/launch/: adrien_sitl.launch  adrien_sitl_ground.launch  controllers.launch  localizers.launch  move_ukf_nodelets.launch  multizone_lidar_pointcloud_converters.launch  optical_flow_test.launch  pointcloud1_to_range_nodes.launch  tracker_controllers.launch
px4_gazebo_sim/rviz/: adrien_sitl.rviz
px4_gazebo_sim/urdf/: adrien.urdf  optical_flow_tester.urdf
sensor_tester/: CMakeLists.txt  package.xml
(+31 files in other folders)
